# My-Demon-List

./: .env.template  .gitignore  Cargo.toml
src/: gd.rs  main.rs  routes.rs  test.rs
src/model/: api_response.rs  demon_list.rs  gd.rs  level.rs  mod.rs  rating.rs  user.rs
src/model/geometry_dash/: gd.rs  mod.rs  routes.rs
src/model/rating/: mod.rs  rate.rs  rating_test.rs  routes.rs
src/model/users/: auth.rs  email.rs  mail.rs  mod.rs  routes.rs  session.rs  user.rs  users_test.rs
src/tests/: mod.rs  users_test.rs
static/: index.html  log_in.html  new_demons.html  register.html  sign_up.html
static/scripts/: hamburger.js  login.js  mainscript.js  register.js  sign_up.js
static/stylesheets/: button.css  form.css  mainsheet.css  signup.css
