[package]
name = "my_demon_list"
version = "0.1.0"
authors = ["ryder"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
tokio = {version = "0.3.5", features = ["full"]}
futures = {version = "0.3.5"}
dash-rs = {git = "https://github.com/zRyder/dash-rs"}
reqwest = {version = "0.10.9", features = ["blocking"]}

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "serve"]