[package]
name = "my_demon_list"
version = "0.1.0"
authors = ["ryder"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
tokio = {version = "0.3.5", features = ["full"]}
futures = {version = "0.3.5"}
dash-rs = {git = "https://github.com/zRyder/dash-rs"}
diesel = {version = "1.4.6", features = ["mysql", "numeric"]}
reqwest = {version = "0.10.9", features = ["blocking"]}
serde_json = {version = "1.0.59"}
chrono = "0.4.19"
serde = {version = "1.0.104", features = ["derive"]}
rust-argon2 = "0.8.3"
argonautica = "0.2.0"
nanoid = "0.4.0"
regex = "1.4.5"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "serve", "diesel_mysql_pool"]
